# datalab0826

./: .aiexclude  .env.example  .gitignore  CLAUDE.md  README.md  SECURITY_AUDIT_REPORT.md  devserver.sh  init_database_compatible.py  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.sh  setup_saas_platform.sh  start_backend.sh
.archive/legacy_root_files/: README.md  data_connectors.py  init_saas_database.py  init_saas_database_fixed.py  main.py  migrate_database.py
.scripts/auth-fixes/: jwt_auth_setup.py  setup_basic_auth.py
.scripts/testing/: test_api_endpoints.py
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_migration.py
api/app/: config.py  db.py  deps.py  main.py  middleware.py  models.py  rate_limit.py  schemas.py  security.py
api/app/routers/: auth.py  health.py  me.py
backend/: .env.example  CLAUDE.md  dev_server.py  pyproject.toml  requirements.txt
backend/apps/api_gateway/: config.py  main.py
backend/apps/api_gateway/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limit.py
backend/apps/api_gateway/routers/: __init__.py  ai.py  analysis.py  auth.py  datasets.py  visualizations.py
backend/apps/api_gateway/services/: __init__.py  proxy.py
backend/apps/data_service/: main.py
backend/apps/legacy_flask/: main.py
backend/dev/development/: startup_architecture_analysis.md
backend/infrastructure/: cicd-automation.md  container-vs-direct-deployment.md  deployment-architecture.md  final-assessment-recommendations.md  load-balancing-service-discovery.md  monitoring-logging-health.md  scalability-high-availability.md  security-network-config.md
backend/scripts/: init_database.py  migrate_database.py  quality_assessment.py
backend/shared/data_connectors/: __init__.py
backend/shared/database/connections/: postgres.py
backend/shared/database/models/: __init__.py  base.py  dataset.py  user.py
backend/shared/utils/: __init__.py  auth.py  config.py  logging.py  security.py
backend/tests/integration/: test_api.py
docker/: docker-compose.yml
docs/: AUTH_SYSTEM_README.md  README.md  SECURITY.md
docs/architecture/: system_architecture.md  system_architecture_complete.md
docs/backend/: api_specification.md  database_schema.md
docs/deployment/: INSTALL.md
docs/development/: AGENTS.md  IMPLEMENTATION_PLAN.md  UV_PYPROJECT_CONFIG_SUMMARY.md  user-dev-prompt.md
docs/frontend/: brand_guidelines.md  frontend_architecture.md  ui_design_system.md  ux_research_report.md  visual_storytelling_guide.md  whimsy_interaction_guide.md
docs/migration/: ARCHIVE_IMPACT_ANALYSIS.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_SUMMARY.md  RESTRUCTURE_SUMMARY.md  SCRIPT_MIGRATION_SUMMARY.md
docs/operations/: analytics_professional_assessment.md
docs/project/: FINAL_VERIFICATION_REPORT.md  saas_platform_prd.md
docs/summary/: BACKEND_CLAUDE_OPTIMIZATION_SUMMARY.md  DOCS_RESTRUCTURE_SUMMARY.md
frontend/: CLAUDE.md  CLAUDE_ORIGINAL.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend_tests/: jest.config.js  jest.setup.js
frontend_tests/components/: Button.test.tsx
scripts/: README.md  validate_analysis_feature.py
scripts/setup/: deploy_production.sh  setup.sh
scripts/testing/: run_all_tests.sh  test_flask_app.py
scripts/utils/: project_health_check.py
src/: index.html
tests/: __init__.py  conftest.py  package.json  playwright_e2e.js  test_api.sh  test_e2e.sh
tests/unit/: test_models.py
web/: .dockerignore  Dockerfile  next.config.js  package.json
web/app/: globals.css  layout.tsx  page.tsx
(+10 files in other folders)
